<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="horizontal">
        <!-- navi -->
        <LinearLayout
            android:id="@+id/app1"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/margin10"
            android:background="@drawable/zf_app_select_style_bg"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/icon_camera" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_16"
                android:text="@string/name_zhifa" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/app2"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/margin10"
            android:background="@drawable/zf_app_select_style_bg"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/icon_ptt" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_16"
                android:text="@string/name_ptt" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/app3"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/margin10"
            android:background="@drawable/zf_app_select_style_bg"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/margin10">

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/icon_filemanager" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_16"
                android:text="@string/name_file_manager" />
        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marging20"
        android:gravity="center"
        android:orientation="horizontal">
        <!-- navi -->
        <LinearLayout
            android:id="@+id/app4"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/margin10"
            android:background="@drawable/zf_app_select_style_bg"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/icon_cards" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_16"
                android:text="@string/name_cards" />
        </LinearLayout>

        <!-- driv -->
        <LinearLayout
            android:id="@+id/app5"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/margin10"
            android:background="@drawable/zf_app_select_style_bg"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/icon_dialer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_16"
                android:text="@string/name_phone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/app6"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/margin10"
            android:background="@drawable/zf_app_select_style_bg"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/margin10">

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/icon_more_app" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_16"
                android:text="@string/name_more_app" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>